2022/07/25 14:40 catch error picture part 사진 업로드 파트 에러 수정

--- a/com-project-clean/src/main/resources/templates/admin/humanResource/blackList/selectBlackListDetail.html
+++ b/com-project-clean/src/main/resources/templates/admin/humanResource/blackList/selectBlackListDetail.html
@@ -3,40 +3,8 @@
 	  xmlns:sec="https://www.thymeleaf.org/thymeleaf-extras-springsecurity5">
 <head>
     <meta charset="UTF-8">
+    <link rel="stylesheet" type="text/css" th:href="@{/css/humanResource/blackList/selectBlackListDetail.css}">
     <title>Document</title>
-    <style type="text/css">
-.tg td {
-	border-style: solid;
-	border-width: 1px;
-	font-size: 14px;
-	padding: 10px 10px;
-}
-
-.tg th {
-	border-style: solid;
-	font-size: 14px;
-}
-
-.tg .tg-7btt {
-	font-weight: bold;
-	text-align: center;
-}
-
-.tableBox{
-	width: 770px;
-}
-.tableBox td {
-	border: solid 1px;
-	font-size: 14px;
-	padding: 10px 10px;
-}
-
-.buttonBox{
-	width:755px;
-	text-align: center;
-}
-
-</style>
 </head>
 <body>
 	<div th:replace="/common/Header.html"></div>
