--- a/com-project-clean/src/main/resources/templates/admin/humanResource/selectAllEmployee/selectEmployee.html
+++ b/com-project-clean/src/main/resources/templates/admin/humanResource/selectAllEmployee/selectEmployee.html
@@ -3,26 +3,10 @@
 	  xmlns:sec="https://www.thymeleaf.org/thymeleaf-extras-springsecurity5">
 <head>
     <meta charset="UTF-8">
+    <link rel="stylesheet" type="text/css" th:href="@{/css/humanResource/selectAllEmployee/selectEmployee.css}">
     <title>Document</title>
         <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
-    <style type="text/css">
 
-.tableBox{
-	width: 770px;
-}
-.tableBox td {
-	border: solid 1px;
-	font-size: 14px;
-	padding: 10px 10px;
-}
-
-.buttonBox{
-	width:755px;
-	text-align: center;
-}
-
-
-</style>
 
 </head>
 <body>
