--- a/com-project-clean/src/main/resources/templates/admin/humanResource/vacation/selectAllVacationHeader.html
+++ b/com-project-clean/src/main/resources/templates/admin/humanResource/vacation/selectAllVacationHeader.html
@@ -3,24 +3,10 @@
 	  xmlns:sec="https://www.thymeleaf.org/thymeleaf-extras-springsecurity5">
 <head>
     <meta charset="UTF-8">
+    <link rel="stylesheet" type="text/css" th:href="@{/css/humanResource/vacation/selectAllVacationHeader.css}">
     <title>Document</title>
     
-    <style>
-	.selectVacationHeader button{
-    margin-top:-6px;
-    width:100px;
-    height:25px;
-	border-radius: 5px;
-    font-size:13px;
-    padding: 0; 
-    background-color: #86cdffa9; 
-    border-style: none;
-	}	
 
- .selectVacationHeader button:hover{
-  background:  #7DBEED ;
- }
-</style>
     
 </head>
 
