--- a/com-project-clean/src/main/resources/templates/admin/humanResource/blackList/selectBlackList.html
+++ b/com-project-clean/src/main/resources/templates/admin/humanResource/blackList/selectBlackList.html
@@ -3,39 +3,15 @@
 	  xmlns:sec="https://www.thymeleaf.org/thymeleaf-extras-springsecurity5">
 <head>
     <meta charset="UTF-8">
+    <link rel="stylesheet" type="text/css" th:href="@{/css/humanResource/blackList/selectBlackList.css}">
     <title>Document</title>
     <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
-    
-    <style>
-   	.section{
-	width: 1000px;
-	}
-	.tableBox{
-		width: 1000px;
-		border: 1px solid black;
-	}
-	.tableBox tr{
-		height: 45px;
-	}
-	.tableBox td{
-		height: 45px;
-	}
-	.searchBox{
-		text-align: right;
-		margin-bottom: 10px;
-	}
-	.pagingBox{
-		 text-align: center;
-		 margin-top: 20px; 
-	}
-	.selectBox{
-		text-align: left;
-	}
-    </style>
+
 </head>
 <body>
 	<div th:replace="/common/Header.html"></div>
 	<div th:replace="/admin/adminAside.html"></div>
+	
 	<section class="section">
 		<div>블랙리스트 조회</div>
 	<div class="searchBox">
