--- a/com-project-clean/src/main/resources/templates/admin/humanResource/registEmployee/adminRegistMainHeader.html
+++ b/com-project-clean/src/main/resources/templates/admin/humanResource/registEmployee/adminRegistMainHeader.html
@@ -3,24 +3,9 @@
 	  xmlns:sec="https://www.thymeleaf.org/thymeleaf-extras-springsecurity5">
 <head>
     <meta charset="UTF-8">
+        <link rel="stylesheet" type="text/css" th:href="@{/css/humanResource/registEmployee/adminRegistMainHeader.css}">
     <title>Document</title>
-    
-    <style>
-	.registEmployeeHeader button{
-    margin-top:-6px;
-    width:100px;
-    height:25px;
-	border-radius: 5px;
-    font-size:13px;
-    padding: 0; 
-    background-color: #86cdffa9; 
-    border-style: none;
-	}	
 
- .registEmployeeHeader button:hover{
-  background:  #7DBEED ;
- }
-</style>
 
 </head>
 
