--- a/com-project-clean/src/main/resources/templates/admin/humanResource/registEmployee/waitingEmployee.html
+++ b/com-project-clean/src/main/resources/templates/admin/humanResource/registEmployee/waitingEmployee.html
@@ -3,50 +3,9 @@
 	  xmlns:sec="https://www.thymeleaf.org/thymeleaf-extras-springsecurity5">
 <head>
     <meta charset="UTF-8">
+    <link rel="stylesheet" type="text/css" th:href="@{/css/humanResource/registEmployee/waitingEmployee.css}">
     <title>Document</title>
     <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
-<style type="text/css">
-
-/* 결재 테이블 */
-.confirmTableBox td {
-	border: solid 1px;
-	font-size: 14px;
-}
-
-.comfirmBox td {
-	height: 75px;
-}
-
-.confirmTableBox {
-	width: 550px;
-	margin-bottom: 20px;
-	
-}
-
-.confirmNameBox{
-	 line-height: 80px;
-}
-
-.confirmDateBox{
-	height: 25px;
-}
-
-/* 인사 테이블 */
-.tableBox{
-	width: 750px;
-}
-
-.tableBox td {
-	border: solid 1px;
-	font-size: 14px;
-	padding: 10px 10px;
-}
-
-.buttonBox{
-	width:750px;
-	text-align: center;
-}
-</style>
 
 </head>
 <body>
@@ -112,7 +71,7 @@
 	                <td style="display: none;"><input name="employeeNo" th:value="${waitingEmployee.employeeNo}"></td>
 	                <td class="subTitle">이름</td>
 	                <td th:text="${waitingEmployee.employeeName}"></td>
-	                <td colspan="2" rowspan="3"> <img id="pictureImg" th:src="@{/adminEmployeePicture/} + ${waitingEmployee.employeePictureSaveName}"></td>
+	                <td colspan="2" rowspan="3"> <img id="pictureImg" th:src="@{/adminEmployeePicture/} + ${waitingEmployee.employeePictureSaveName}" width="125px" height="125px"></td>
 	              </tr>
 	              <tr>
 	                <td class="subTitle">ID</td>
