--- a/com-project-clean/src/main/resources/templates/admin/humanResource/selectAllEmployee/selectEmployeeListHeader.html
+++ b/com-project-clean/src/main/resources/templates/admin/humanResource/selectAllEmployee/selectEmployeeListHeader.html
@@ -3,23 +3,9 @@
 	  xmlns:sec="https://www.thymeleaf.org/thymeleaf-extras-springsecurity5">
 <head>
 <meta charset="UTF-8">
+<link rel="stylesheet" type="text/css" th:href="@{/css/humanResource/selectAllEmployee/selectEmployeeListHeader.css}">
 <title>Insert title here</title>
-<style>
-	.selectEmployeeHeader button{
-    margin-top:-6px;
-    width:100px;
-    height:25px;
-	border-radius: 5px;
-    font-size:13px;
-    padding: 0; 
-    background-color: #86cdffa9; 
-    border-style: none;
-	}	
 
- .selectEmployeeHeader button:hover{
-  background:  #7DBEED ;
- }
-</style>
 </head>
 
 <body>
