--- a/com-project-clean/src/main/resources/templates/admin/humanResource/vacation/selectAllVacation.html
+++ b/com-project-clean/src/main/resources/templates/admin/humanResource/vacation/selectAllVacation.html
@@ -3,35 +3,11 @@
 	  xmlns:sec="https://www.thymeleaf.org/thymeleaf-extras-springsecurity5">
 <head>
     <meta charset="UTF-8">
+    <link rel="stylesheet" type="text/css" th:href="@{/css/humanResource/vacation/selectAllVacation.css}">
     <title>Document</title>
     <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
 </head>
-<style>
-	.section{
-		width: 1000px;
-	}
-	
-	.tableBox{
-		width: 1000px;
-		border: 1px solid black;
-	}
-	.tableBox tr{
-		height: 45px;
-	}
-	.tableBox td{
-		height: 45px;
-	}
-	.searchBox{
-		text-align: right;
-		margin-bottom: 10px;
-	}
-	.pagingBox{
-		 text-align: center;
-	}
-	.selectBox{
-		text-align: left;
-	}
-</style>
+
 
 <body>
 
