2022/07/25 14:54 select All emplyoee / admin link connection 전체 인원 조회 중 직원 관리자 인원조회 href 연결

--- a/com-project-clean/src/main/resources/templates/admin/hrCard/hr/selectAdminListHeader.html
+++ b/com-project-clean/src/main/resources/templates/admin/hrCard/hr/selectAdminListHeader.html
@@ -26,7 +26,7 @@
 	<div class="selectEmployeeHeader">
 		<th:block sec:authorize="hasRole('ROLE_ADMIN_HR')">
 			<button onclick="location.href='/admin/hrCard/hr/adminList'">관리자</button>
-			<button onclick="location.href='location.href='/admin/select/retireN">직원</button>
+			<button onclick="location.href='/admin/select/AllEmployee/move'">직원</button>
 		</th:block>
 	</div>
 
