--- a/com-project-clean/src/main/resources/templates/admin/humanResource/selectAllEmployee/selectEmployeeListHeader.html
+++ b/com-project-clean/src/main/resources/templates/admin/humanResource/selectAllEmployee/selectEmployeeListHeader.html
@@ -11,7 +11,7 @@
 <body>
 	<div class="selectEmployeeHeader">
 		<th:block sec:authorize="hasRole('ROLE_ADMIN_HR')">
-			<button onclick="location.href='location.href='/admin/select/retireN">직원</button>
+			<button onclick="location.href='/admin/select/retireN'">직원</button>
 			<button onclick="location.href='/admin/hrCard/hr/adminList'">관리자</button>
 		</th:block>
 	</div>
