--- a/com-project-clean/src/main/resources/templates/common/Header.html
+++ b/com-project-clean/src/main/resources/templates/common/Header.html
@@ -46,7 +46,7 @@
 
                 <div class="collapse navbar-collapse" id="navbarSupportedContent">
                     
-                    <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+                    <ul class="navbar-nav me-auto mb-2 mb-lg-0" style="width:80%">
                     	
                         <li class="nav-item dropdown">
                             <a href="/member/chatt" target="_blank">
