--- a/com-project-clean/src/main/resources/templates/common/find/id.html
+++ b/com-project-clean/src/main/resources/templates/common/find/id.html
@@ -26,10 +26,10 @@
 					<option value="employee">직원</option>
 	        	</select>
 				
-				<br><br>
+				<br><br><br>
 
 	            <div class="loginbottomnav col-xl-3">
-	                <label class="personalcolordiv col-xl-3">이름 : </label>
+	                <label class="personalcolordiv col-xl-3">이름 : &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</label>
 	                <input type="text" name="name" class="name" required><br>
 	            </div>
 
