--- a/com-project-clean/src/main/resources/static/css/common/login/loginPage.css
+++ b/com-project-clean/src/main/resources/static/css/common/login/loginPage.css
@@ -1,8 +1,20 @@
+
+@font-face {
+    font-family: 'MinSans-Medium';
+    src: url('https://cdn.jsdelivr.net/gh/projectnoonnu/noonfonts_2201-2@1.0/MinSans-Medium.woff') format('woff');
+}
+
+* {
+	margin: 0;
+	padding: 0;
+	font-family: 'MinSans-Medium';
+}
+
 .logintopnav{
     width: 100%;
     height: 20%;
     border: 0px solid;
-    background-color: rgba(104, 228, 255, 1);
+    background-color: #7DBEED;
     font-size: xx-large;
     font-style: italic;
     color: white;
@@ -14,16 +26,23 @@
     text-align: center;
     font-size: xx-large;
     font-style: oblique;
-    color: rgba(104, 228, 255, 1);
+    color: #7DBEED;
     text-shadow: 1px 1px 4px gray;
     margin-top: 5%;
     margin-bottom: 5%;
 }
 
+form {
+	text-align: center;
+	position:absolute;
+	top:35%;
+	left:50%;
+	transform: translate(-50%, -50%);
+}
+
 .loginbottomnav{
     width: 100%;
     height: 40%;
-    margin-left: 43%;
 }
 
 
@@ -34,31 +53,68 @@ input{
 }
 
 .login {
-    border: 0px;
-    width: 10%;
-    margin-top: 10%;
     background-color: white;
+    width:100%;
+    height:100%;
+    border:none;
+    background-color:#7DBEED;
+    border-radius: 5px;
+    color:white;
 }
 
 .idFind {
-    width: 10%;
+	margin-top:12px;
+    width: 30%;
+    font-size:14px;
     background-color: white;
     border: 0px;
 }
 
-.pwdFind {
-    width: 10%;
-    background-color: white;
-    border: 0px;
+.idFind:hover {
+	color: #7DBEED;
 }
+
 
 a{
 	width: 100%;
     height: 20%;
     border: 0px solid;
-    background-color: rgba(104, 228, 255, 1);
-    font-size: xx-large;
     font-style: italic;
     color: white;
     text-decoration: none ;
 }
+
+.loginbottomnav >button:hover{
+	cursor: pointer;
+}
+
+#loginWrap{
+	float: left;
+}
+
+.loginbt {
+	margin-left:12px;
+	float:left;
+	width:50px;
+	height:65px;
+	text-align: center;
+
+}
+
+#username {
+	margin-left:13px;
+}
+
+label {
+	font-size: 14px;
+}
+
+input {
+	height:18px;
+	border-radius: 5px;
+}
+
+.custom-control-input {
+	height: auto;
+}
+
