--- a/com-project-clean/src/main/resources/templates/admin/humanResource/selectAllEmployee/modifyEmployee.html
+++ b/com-project-clean/src/main/resources/templates/admin/humanResource/selectAllEmployee/modifyEmployee.html
@@ -53,7 +53,9 @@
 	             	</select> -
 	             	<input type="text" id="employeePhone2" name="employeePhone2" class="required" maxlength='4' th:value="${phone.middlePhoneNumber}" required style="width: 45px"> -
 	             	<input type="text" id="employeePhone3" name="employeePhone3" class="required" maxlength='4' th:value="${phone.lastPhoneNumber}" required style="width: 45px">
+	             	<input type="text" id="fullPhone" name="fullPhone" th:value="${fullPhone}" required style="display: none;">
 	             	<input style="display: none;" type="text" id="employeePhone" name="employeePhone">
+	             	
                     	<div class="warning" id="middleNumCheckMessage" >3~4자리 숫자를 입력해주세요</div>
                     	<div class="warning" id="endNumCheckMessage" >4자리 숫자를 입력해주세요</div>
                     	<div class="warning" id="duplicateCheckMessage" >중복된 핸드폰번호입니다.</div>
@@ -265,28 +267,21 @@
 
 					$("#employeePhone2").focusout(
 									function() {
+						            	const fullPhone = $("#fullPhone").val();
 										var regexp = /^[0-9]{3,4}/g;
 										if (!regexp.test($("#employeePhone2").val())) { // 중간번호 틀리면
 											$("#duplicateCheckMessage").hide();
-										console.log(1);
 											$("#middleNumCheckMessage").show();
-										console.log(2);
 											$("#endNumCheckMessage").hide();
-										console.log(3);
 									         $(this).val('');
-										console.log(4);
 											$(this).focus();
-										console.log(5);
 										} else { // 중간번호 맞으면
 											$("#middleNumCheckMessage").hide();
 											$.ajax({
 													url:"/admin/hr/regist/employee/findMiddlePhone",														
 													success : function(data) {
-										console.log(6);
 														for (var i = 0; i < data.length; i++) {
-										console.log(77);
-															if (data[i] == $("#employeePhone1").val() + $("#employeePhone2").val() + $("#employeePhone3").val()) { // 중복값이면
-										console.log(8);
+															if ((data[i] == $("#employeePhone1").val()+ $("#employeePhone2").val()+ $("#employeePhone3").val()) && data[i] != fullPhone ) {
 																$("#duplicateCheckMessage").show();
 																$("#middleNumCheckMessage").hide();
 																$("#endNumCheckMessage").hide();
@@ -295,11 +290,8 @@
 																
 																break;
 															} else { //성공하면
-										console.log(9);
 																$("#duplicateCheckMessage").hide();
-										console.log(10);
 																$("#middleNumCheckMessage").hide();
-										console.log(11);
 																$("#endNumCheckMessage").hide();
 															}
 														}
@@ -316,37 +308,24 @@
 					
 					$("#employeePhone3").focusout(
 									function() {
+						            	const fullPhone = $("#fullPhone").val();
 										var regexp = /^[0-9]{4}/g;
 										if (!regexp.test($("#employeePhone3").val())) {	//정규표현식이 틀리면
-											console.log(12);
 											$("#duplicateCheckMessage").hide();
-											console.log(13);
 											$("#middleNumCheckMessage").hide();
-											console.log(14);
 											$("#endNumCheckMessage").show();
-											console.log(15);
 										     $(this).val('');
-										     console.log(16);
 											$(this).focus();
-										     console.log(17);
 										} else {		// 정규표현식이 맞다면
-										     console.log(18);
 											$("#endNumCheckMessage").hide();
-										     console.log(19);
 											$.ajax({
 													url:"/admin/hr/regist/employee/findMiddlePhone",														
 													success : function(data) {
-										     console.log(20);
 										     			for(var i = 0; i < data.length; i++){
-										     console.log(21);
 										     				if($("#employeePhone2")){
-										     console.log(22);
-										     				if(data[i] ==$("#employeePhone1").val() + $("#employeePhone2").val() + $("#employeePhone3").val()){
-										     console.log(23);
+										     					if ((data[i] == $("#employeePhone1").val()+ $("#employeePhone2").val()+ $("#employeePhone3").val()) && data[i] != fullPhone ) {
 										     					$("#duplicateCheckMessage").show();
-										     console.log(24);
 										     			     	$("#middleNumCheckMessage").hide();
-										     console.log(25);
 										     			     	$("#endNumCheckMessage").hide();
 										     			     	
 										     				    $("#employeePhone3").val('');
@@ -413,8 +392,7 @@
 					})
 					/* 핸드폰 앞자리 선택 체크 */
 					const checkedFirstPhone = $("#firstPhoneNumber").val();
-					$("#employeePhone1").val(checkedFirstPhone).prop(
-							"selected", true);
+					$("#employeePhone1").val(checkedFirstPhone).prop("selected", true);
 
 					/* 변형 */
 					$("#pictureModify").click(function() {
